--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@ article {
       opacity: 0;
     }
 
+
 		</style>
 
 	</head>
@@ -101,8 +102,14 @@ article {
 										<a href="#" class="author"><span class="name">Admin</span></span></span><img src="images/logo.jpg" alt="" /></a>
 									</div>
 								</header>
-								<a href="single.html" class="image featured"><img src="images/pic1.jpg" alt="" /></a>
+								<video width="100%" height="auto" controls>
+									<source src="video.mp4" type="video/mp4">
+								
+								  Your browser does not support the video tag.
+								  </video>
+																	
 								<p>'0110-the-game/chronomaze/roadtounknown' is a brain storming and mind bending gaming event developed and hosted by 011-Creative Institute. This organization is sharing a mission with Yeliums-The Youth Project for helping the youth in becoming a good decision maker, gain new skills by pushing their limit of intellect and unlock thier brain.</p>
+								</span>
 								<footer>
 									<ul class="actions">
 										<li><a href="#" class="button large">Continue Reading</a></li>
@@ -603,7 +610,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
   <script>
     // Set the date and time for the countdown
-    var countDownDate = new Date("November 10, 2023 00:00:00").getTime();
+    var countDownDate = new Date("December 10, 2023 00:00:00").getTime();
 
     // Update the countdown every second
     var x = setInterval(function() {
